<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dexterity</string>
    <string name="title_section1">Wixel Connect</string>
    <string name="title_section3">G4 Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example"></string>
    <string name="action_settings">Settings</string>
    <string name="recUSBText1">USB Device:</string>
    <string name="SocketDebug">SocketDebug</string>
    <string name="recUSBText2">Data View</string>
    <string name="recUSBText3">Log View</string>
    <string name="UsbDeviceName">Disconnected</string>
    <string name="dataView"></string>
    <string name="killMe">Stop Reading</string>
    <string name="notification_ReceiverAttached">notification_ReceiverAttached</string>
    <string name="notification_DeviceMessage">notification_DeviceMessage</string>
    <string name="title_activity_usb_attach_workaround">UsbAttachWorkaroundActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="setting_title">Comunication setting</string>
    <string name="port_number">Port Number</string>
    <string name="port_number_summary">Set port for tcp connection to this device</string>    

    <string name="uploader_name">Uploader name</string>
    <string name="uploader_name_summary">Give a unique name to identify this uploader</string>
    
    <string name="db_uri">standard URI</string>
    <string name="db_uri_summary">Set the standard URI based on the mongolab addresses</string>

    <string name="transmitter_id">Transmitter id</string>
    <string name="transmitter_id_summary">Written at the back of trasmitter. Use 0 in order not to filter. When BT is used, will be set on the record. When USB will be used to filter</string>

    <string-array name="bt_devices">
        <item>none</item>
        <item>20:C3:8F:F3:D2:C0</item>
        <item>20:C3:8F:F3:D2:C1</item>
    </string-array>    
</resources>
