<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/setting_title" >
        <EditTextPreference
                android:title="@string/port_number"
                android:summary="@string/port_number_summary"
                android:key="portNumber"
                android:inputType="number"
                android:defaultValue="50005"
        />

        <EditTextPreference
                android:title="@string/uploader_name"
                android:summary="@string/uploader_name_summary"
                android:key="machineName"
                android:inputType="text"
                android:defaultValue="MachineUnknown"
        />
        
        <EditTextPreference
                android:title="@string/db_uri"
                android:summary="@string/db_uri_summary"
                android:key="dbUri"
                android:inputType="text"
                android:defaultValue="mongodb://user:pass@ds053958.mongolab.com:53958/nightscout"
        />
        
        <EditTextPreference
                android:title="@string/transmitter_id"
                android:summary="@string/transmitter_id_summary"
                android:key="transmitter_id"
                android:inputType="text"
                android:defaultValue="6FKJE"
        />
        
        <ListPreference
            android:key="bt_device"
            android:title="What xBridge to connect to"
            android:summary="MAC address of device"
            android:entries="@array/bt_devices"
            android:entryValues="@array/bt_devices"
            android:defaultValue="none"/>
        
        <Preference android:title="Verify mongo addresses"
                android:key="key_test_mongo"
                android:summary="Not tested"/>

         <Preference android:title="Set transmiter id"
                android:key="key_copy_txid"
                android:summary="copy tid from last recieved data"/>
        
        
        </PreferenceCategory>
        
    

        </PreferenceScreen>